# clarity

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
clarity/: app.py  settings.py
clarity.web/: index.html  package-lock.json  package.json  vite.config.js
clarity.web/src/: App.vue
clarity.web/src/components/: Dashboard.vue
clarity.web/src/models/: settings.ts
nginx/config/: config.json
