[tool.poetry]
name = "clarity"
version = "0.0.1"
description = "Clean and minimal homelab dashboard"
authors = ["Ivan Borisenko <contact@13g10n.com>"]
readme = "README.md"
packages = [{include = "clarity"}]

[tool.poetry.dependencies]
python = "^3.11"
blacksheep = "^2.0.7"
uvicorn = "^0.27.1"
jinja2 = "^3.1.3"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
